--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
+/*
 .App {
-  /*padding: 30px;
-  display: flex;*/
+  padding: 30px;
+  display: flex;
 }
 
 .App > div {
@@ -22,3 +23,4 @@
 .is-done {
   opacity: 0.5;
 }
+*/
